--- a/common/app/assets/stylesheets/_extends-only.scss
+++ b/common/app/assets/stylesheets/_extends-only.scss
@@ -28,3 +28,18 @@
 %type-10 { @include font($sans-serif, normal, 13, 20); }
 %type-11 { @include font($sans-serif, normal, 12, 16); }
 %type-12 { @include font($sans-serif, normal, 11, 16); }
+
+%d-badge-icon {
+    display: inline-block;
+    position: relative;
+    top: -.1em;
+    background: #005689;
+    color: #fff;
+    font: bold 13px/1 EgyptianHeadline, Georgia, serif;
+    width: 1em;
+    height: 1em;
+    margin-left: .2em;
+    vertical-align: middle;
+    text-align: center;
+    cursor: help;
+}
