--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -3,6 +3,7 @@
 //Variables and mixins
 @import "_vars";
 @import "_mixins";
+@import "module/_discussion-mixins";
 @import "_extends-only";
 @import "layout/_grid-system";
 
