--- a/common/app/assets/stylesheets/head.scss
+++ b/common/app/assets/stylesheets/head.scss
@@ -11,6 +11,7 @@
 
 //Base
 @import "base/_type";
+@import "_extends-only";
 @import "base/_links";
 @import "base/_helpers";
 @import "base/_lists";
