--- a/common/app/assets/stylesheets/base/_type.scss
+++ b/common/app/assets/stylesheets/base/_type.scss
@@ -35,6 +35,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: $serif;
     margin: 0;
+    text-rendering: optimizeLegibility;
 }
 
 .type-0 { @extend %type-0; }
