--- a/common/app/assets/stylesheets/module/nav/_pop-up.scss
+++ b/common/app/assets/stylesheets/module/nav/_pop-up.scss
@@ -65,3 +65,11 @@
         }
     }
 }
+
+
+
+/* Local navigation popup
+   ========================================================================== */
+.nav-popup-localnav {
+    top: 110px;
+}
