--- a/core-navigation/app/views/fragments/mostPopular.scala.html
+++ b/core-navigation/app/views/fragments/mostPopular.scala.html
@@ -21,7 +21,8 @@
         @popular.zipWithRowInfo.map{ case (section, info) =>
             <div id="tabs-popular-@info.rowNum"
                 class="@if(isTabbed){tabs-pane @if(!info.isFirst){ js-hidden}} headline-list"
-                data-link-name="@section.heading">
+                data-link-name="@section.heading"
+                data-link-context="most-read/@section.section">
 
                 <ul class="unstyled">
                     @section.trails.zipWithRowInfo.map{ case (trail, info) =>
