--- a/common/app/views/fragments/commonCssSetup.scala.html
+++ b/common/app/views/fragments/commonCssSetup.scala.html
@@ -1,11 +1,6 @@
 @()
 
-<style type="text/css">
-    @Html(Head.css)
-    /* any images in  head need to go here (or they'll be relative to the page) */
-    .i,.caption:before,figcaption:before { background-image: url(@Static("images/global/sprite.png")); }
-    .is-updating { background-image: url(@Static("images/auto-update-activity.gif")); }
-</style>
+<link rel="stylesheet" type="text/css" href="@Static("stylesheets/global.min.css")" />
 
 <style class="initial" data-cache-name="WebEgyptian" data-cache-file-woff="@Static("fonts/WebEgyptian.woff.js")" data-cache-file-ttf="@Static("fonts/WebEgyptian.ttf.js")"></style>
 
