--- a/admin/app/views/admin_main.scala.html
+++ b/admin/app/views/admin_main.scala.html
@@ -22,7 +22,10 @@
                     Knockout: '@routes.Assets.at("javascripts/vendor/knockout-2.1.0.debug")',
                     KnockoutSortable: '@routes.Assets.at("javascripts/vendor/knockout-sortable")',
                     AutoComplete: '@routes.Assets.at("javascripts/modules/AutoComplete")',
-                    models: '@routes.Assets.at("javascripts/models")'
+                    models: '@routes.Assets.at("javascripts/models")',
+                    reqwest: '@routes.Assets.at("javascripts/components/reqwest/reqwest")',
+                    bean: '@routes.Assets.at("javascripts/components/bean/bean")',
+                    bonzo: '@routes.Assets.at("javascripts/components/bonzo/bonzo")'
                 }
             }
         </script>
