--- a/common/app/views/fragments/metaData.scala.html
+++ b/common/app/views/fragments/metaData.scala.html
@@ -13,6 +13,10 @@
     <link rel="apple-touch-icon" sizes="72x72" href="@Static("images/favicons/72x72.png")" />
     <link rel="apple-touch-icon-precomposed" href="@Static("images/favicons/57x57.png")" />
 
+    <meta name="application-name" content="The Guardian" />
+    <meta name="msapplication-TileColor" content="#004983" />
+    <meta name="msapplication-TileImage" content="http://static.guim.co.uk/static/07c0b27cd791a8933c5a5bd9abcbd33e33cf4371/common/images/favicons/windows_tile_144_b.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no" />
 @*
